# noebot-plugin-cig

./: README.md  pyproject.toml  rule2-cig1.py  rule5-cig2.py  星际公民玩家信息.xlsx
